module(name = "nss")

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "nspr")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "20.1.1",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
