load("//lib:config.bzl", "cc_library")

exports_files([
    "base.h",
    "baset.h",
    "nssbase.h",
    "nssbaset.h",
])

cc_library(
    name = "nssb",
    srcs = [
        "arena.c",
        "error.c",
        "errorval.c",
        "hash.c",
        "hashops.c",
        "item.c",
        "libc.c",
        "list.c",
        "tracker.c",
        "utf8.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "base",
    actual = ":nssb",
    visibility = ["//lib:__subpackages__"],
)
