load("//lib:config.bzl", "cc_library")

exports_files([
    "nss.h",
    "nssoptions.h",
    "nssrenam.h",
])

# Process nss.def into a linker version script for Linux
genrule(
    name = "nss_version_script",
    srcs = ["nss.def"],
    outs = ["nss.map"],
    cmd = "grep -v ';-' $< | sed -e 's,;+,,' -e 's; DATA ;;' -e 's,;;,,' -e 's,;.*,;,' > $@",
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "nss",
    srcs = [
        "nssinit.c",
        "nssoptions.c",
        "nssver.c",
        "utilwrap.c",
    ],
    implementation_deps = [
        "//lib/base",
        "//lib/certdb",
        "//lib/certhigh",
        "//lib/cryptohi",
        "//lib/dev",
        "//lib/libpkix",
        "//lib/pk11wrap",
        "//lib/pki",
    ],
    includes = [
        "../util",
    ],
    textual_hdrs = [
        "//lib/util:templates.c",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)
