load("//lib:config.bzl", "cc_library")

exports_files([
    "p7local.h",
    "pkcs7t.h",
    "secmime.h",
    "secpkcs7.h",
])

cc_library(
    name = "pkcs7",
    srcs = [
        "certread.c",
        "p7common.c",
        "p7create.c",
        "p7decode.c",
        "p7encode.c",
        "p7local.c",
        "secmime.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)
