load("//lib:config.bzl", "cc_library")

# Process smime.def into a linker version script for Linux
genrule(
    name = "smime_version_script",
    srcs = ["smime.def"],
    outs = ["smime.map"],
    cmd = "grep -v ';-' $< | sed -e 's,;+,,' -e 's; DATA ;;' -e 's,;;,,' -e 's,;.*,;,' > $@",
    visibility = ["//:__pkg__"],
)

exports_files([
    "cms.h",
    "cmslocal.h",
    "cmsreclist.h",
    "cmst.h",
    "smime.h",
])

cc_library(
    name = "smime",
    srcs = [
        "cmsarray.c",
        "cmsasn1.c",
        "cmsattr.c",
        "cmscinfo.c",
        "cmscipher.c",
        "cmsdecode.c",
        "cmsdigdata.c",
        "cmsdigest.c",
        "cmsencdata.c",
        "cmsencode.c",
        "cmsenvdata.c",
        "cmsmessage.c",
        "cmspubkey.c",
        "cmsrecinfo.c",
        "cmsreclist.c",
        "cmssigdata.c",
        "cmssiginfo.c",
        "cmsudf.c",
        "cmsutil.c",
        "smimemessage.c",
        "smimeutil.c",
        "smimever.c",
    ],
    implementation_deps = [
        "//lib/pkcs12",
        "//lib/pkcs7",
    ],
    visibility = ["//visibility:public"],
)
