load("//lib:config.bzl", "cc_library")

# Process nssutil.def into a linker version script for Linux
genrule(
    name = "nssutil_version_script",
    srcs = ["nssutil.def"],
    outs = ["nssutil.map"],
    cmd = "grep -v ';-' $< | sed -e 's,;+,,' -e 's; DATA ;;' -e 's,;;,,' -e 's,;.*,;,' > $@",
    visibility = ["//:__pkg__"],
)

exports_files([
    "base64.h",
    "ciferfam.h",
    "eccutil.h",
    "hasht.h",
    "kyber.h",
    "ml_dsat.h",
    "nssb64.h",
    "nssb64t.h",
    "nsshash.h",
    "nssilckt.h",
    "nssilock.h",
    "nsslocks.h",
    "nssrwlk.h",
    "nssrwlkt.h",
    "nssutil.h",
    "pkcs11.h",
    "pkcs11f.h",
    "pkcs11n.h",
    "pkcs11p.h",
    "pkcs11t.h",
    "pkcs11u.h",
    "pkcs11uri.h",
    "pkcs1sig.h",
    "portreg.h",
    "secasn1.h",
    "secasn1t.h",
    "seccomon.h",
    "secder.h",
    "secdert.h",
    "secdig.h",
    "secdigt.h",
    "secerr.h",
    "secitem.h",
    "secoid.h",
    "secoidt.h",
    "secport.h",
    "utilmodt.h",
    "utilpars.h",
    "utilparst.h",
    "utilrename.h",
    "verref.h",
    "templates.c",
])

cc_library(
    name = "nssutil",
    srcs = [
        "SECerrs.h",
        "derdec.c",
        "derenc.c",
        "dersubr.c",
        "dertime.c",
        "errstrs.c",
        "nssb64d.c",
        "nssb64e.c",
        "nsshash.c",
        "nssilock.c",
        "nssrwlk.c",
        "oidstring.c",
        "pkcs11uri.c",
        "pkcs1sig.c",
        "portreg.c",
        "quickder.c",
        "secalgid.c",
        "secasn1d.c",
        "secasn1e.c",
        "secasn1u.c",
        "secdig.c",
        "secitem.c",
        "secload.c",
        "secoid.c",
        "secport.c",
        "sectime.c",
        "templates.c",
        "utf8.c",
        "utilmod.c",
        "utilpars.c",
    ],
    win_def_file = "nssutil.def",
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "util",
    actual = ":nssutil",
    visibility = ["//visibility:public"],
)
