load("//lib:config.bzl", "cc_library")

exports_files([
    "pkix_certselector.h",
    "pkix_comcertselparams.h",
])

cc_library(
    name = "pkixcertsel",
    srcs = [
        "pkix_certselector.c",
        "pkix_comcertselparams.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "certsel",
    actual = ":pkixcertsel",
    visibility = ["//lib:__subpackages__"],
)
