load("//lib:config.bzl", "cc_library")

exports_files([
    "pkix_basicconstraintschecker.h",
    "pkix_certchainchecker.h",
    "pkix_crlchecker.h",
    "pkix_ekuchecker.h",
    "pkix_expirationchecker.h",
    "pkix_namechainingchecker.h",
    "pkix_nameconstraintschecker.h",
    "pkix_ocspchecker.h",
    "pkix_policychecker.h",
    "pkix_revocationchecker.h",
    "pkix_revocationmethod.h",
    "pkix_signaturechecker.h",
    "pkix_targetcertchecker.h",
])

cc_library(
    name = "pkixchecker",
    srcs = [
        "pkix_basicconstraintschecker.c",
        "pkix_certchainchecker.c",
        "pkix_crlchecker.c",
        "pkix_ekuchecker.c",
        "pkix_expirationchecker.c",
        "pkix_namechainingchecker.c",
        "pkix_nameconstraintschecker.c",
        "pkix_ocspchecker.c",
        "pkix_policychecker.c",
        "pkix_revocationchecker.c",
        "pkix_revocationmethod.c",
        "pkix_signaturechecker.c",
        "pkix_targetcertchecker.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "checker",
    actual = ":pkixchecker",
    visibility = ["//lib:__subpackages__"],
)
