load("//lib:config.bzl", "cc_library")

exports_files([
    "pkix_procparams.h",
    "pkix_resourcelimits.h",
    "pkix_trustanchor.h",
    "pkix_valparams.h",
])

cc_library(
    name = "pkixparams",
    srcs = [
        "pkix_procparams.c",
        "pkix_resourcelimits.c",
        "pkix_trustanchor.c",
        "pkix_valparams.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "params",
    actual = ":pkixparams",
    visibility = ["//lib:__subpackages__"],
)
