load("//lib:config.bzl", "cc_library")

exports_files([
    "pkix_buildresult.h",
    "pkix_policynode.h",
    "pkix_valresult.h",
    "pkix_verifynode.h",
])

cc_library(
    name = "pkixresults",
    srcs = [
        "pkix_buildresult.c",
        "pkix_policynode.c",
        "pkix_valresult.c",
        "pkix_verifynode.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "results",
    actual = ":pkixresults",
    visibility = ["//lib:__subpackages__"],
)
