load("//lib:config.bzl", "cc_library")

exports_files([
    "pkix_store.h",
])

cc_library(
    name = "pkixstore",
    srcs = [
        "pkix_store.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "store",
    actual = ":pkixstore",
    visibility = ["//lib:__subpackages__"],
)
