load("//lib:config.bzl", "cc_library")

exports_files([
    "pkix_error.h",
    "pkix_list.h",
    "pkix_logger.h",
    "pkix_tools.h",
])

cc_library(
    name = "pkixutil",
    srcs = [
        "pkix_error.c",
        "pkix_errpaths.c",
        "pkix_list.c",
        "pkix_logger.c",
        "pkix_tools.c",
    ],
    deps = [
        "@nspr//lib/ds",
        "@nspr//lib/libc",
        "@nspr//pr",
    ],
)

alias(
    name = "util",
    actual = ":pkixutil",
    visibility = ["//lib:__subpackages__"],
)
